--- a/templates/DiseaseDetector/index.html
+++ b/templates/DiseaseDetector/index.html
@@ -1,13 +1,21 @@
 <html>
     <head>
         <title></title>    
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="static/css/bootstrap.min.css" rel="stylesheet">   
         <link href="https://surveyjs.azureedge.net/1.1.20/survey.css" type="text/css" rel="stylesheet" /> 
     </head>
 
     <body>
 
-        <div id="surveyContainer" class="col-lg-12"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2 col-sm-0"></div>
+                <div id="surveyContainer" class="col-lg-8 col-sm-12"></div>
+                <div class="col-lg-2 col-sm-0"></div>
+            </div>
+        </div>
+        
 
         
         
