--- a/templates/DiseaseDetector/navbar.html
+++ b/templates/DiseaseDetector/navbar.html
@@ -31,10 +31,8 @@
   {% else %}
   <ul class="nav navbar-nav navbar-right">
     <p>
-      <a href="">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sing In</button>
-      </a>
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sing Up</button>
+      <a href="/anketa">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Анкета</button>
       </a>
     </p>
   </ul>
