--- a/templates/DiseaseDetector/anketa.html
+++ b/templates/DiseaseDetector/anketa.html
@@ -1,34 +1,15 @@
-<html>
-    <head>
-        <title></title>    
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="static/css/bootstrap.min.css" rel="stylesheet">   
-        <link href="static/css/main.css" rel="stylesheet">  
-        <link href="https://surveyjs.azureedge.net/1.1.20/survey.css" type="text/css" rel="stylesheet" /> 
-    </head>
+{% extends 'DiseaseDetector/base.html' %}
+{% load static %}
 
-    <body>
+{% block styles %}
+{% endblock %}
 
-
-        <div class="container">
-            <div class="row vertical-center">
-                <div class="col-lg-2 col-sm-0"></div>
-                <div id="surveyContainer" class="col-lg-8 col-sm-12"></div>
-                <div class="col-lg-2 col-sm-0"></div>
-            </div>
+{% block content %}
+    <div class="container">
+        <div class="row vertical-center">
+            <div class="col-lg-2 col-sm-0"></div>
+            <div id="surveyContainer" class="col-lg-8 col-sm-12"></div>
+            <div class="col-lg-2 col-sm-0"></div>
         </div>
-      
-        
-        
-
-        <script src="static/js/jquery.js"></script>
-        <script src="static/js/bootstrap.js"></script>
-        <script src="static/js/bootstrap.min.js"></script>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script src="https://surveyjs.azureedge.net/1.1.20/survey.jquery.min.js"></script>
-        <script src="static/js/main.js"></script>
-
-
-    </body>
-</html>
+    </div>
+{% endblock %}
