--- a/templates/DiseaseDetector/base.html
+++ b/templates/DiseaseDetector/base.html
@@ -9,21 +9,30 @@
     <!-- Bootstrap CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <!-- Custom styles -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">   
+    <link href="static/css/main.css" rel="stylesheet">  
+    <link href="https://surveyjs.azureedge.net/1.1.20/survey.css" type="text/css" rel="stylesheet" /> 
+
   </head>
   <body>
 
       {% include 'DiseaseDetector/navbar.html' %}
 
       {% block content %}
+      
       {% endblock %}
 
 
+    <script src="static/js/jquery.js"></script>
+    <script src="static/js/bootstrap.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
 
-        <script src="{% static 'jquery/jquery.js' %}"></script>
-        <script src="{% static 'js/bootstrap.js' %}"></script>
-    
-        <!-- <script src="{% static 'js/bootstrap.min.js' %}"></script> -->
-        <script src="{% static 'js/like_dislike.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://surveyjs.azureedge.net/1.1.20/survey.jquery.min.js"></script>
+    <script src="static/js/main.js"></script>
+
       </body>
     </html>
