Fix weird 'anketa' path

--- a/templates/DiseaseDetector/base.html
+++ b/templates/DiseaseDetector/base.html
@@ -1,10 +1,11 @@
-{% load static%}
+{% load static %}
 
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <title>aidvantage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -12,27 +13,27 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">   
-    <link href="static/css/main.css" rel="stylesheet">  
-    <link href="https://surveyjs.azureedge.net/1.1.20/survey.css" type="text/css" rel="stylesheet" /> 
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/main.css" rel="stylesheet">
+    <link href="https://surveyjs.azureedge.net/1.1.20/survey.css" type="text/css" rel="stylesheet"/>
 
-  </head>
-  <body>
+</head>
+<body>
 
-      {% include 'DiseaseDetector/navbar.html' %}
+{% include 'DiseaseDetector/navbar.html' %}
 
-      {% block content %}
-      
-      {% endblock %}
+{% block content %}
+
+{% endblock %}
 
 
-    <script src="static/js/jquery.js"></script>
-    <script src="static/js/bootstrap.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
+<script src="/static/js/jquery.js"></script>
+<script src="/static/js/bootstrap.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://surveyjs.azureedge.net/1.1.20/survey.jquery.min.js"></script>
-    <script src="static/js/main.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://surveyjs.azureedge.net/1.1.20/survey.jquery.min.js"></script>
+<script src="/static/js/main.js"></script>
 
-      </body>
-    </html>
+</body>
+</html>
