--- a/templates/DiseaseDetector/navbar.html
+++ b/templates/DiseaseDetector/navbar.html
@@ -19,7 +19,7 @@
   {% else %}
   <ul class="nav navbar-nav navbar-right">
     <p>
-      <a href="/anketa">
+        <a href="/survey">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Анкета</button>
       </a>
     </p>
