--- a/templates/DiseaseDetector/survey.html
+++ b/templates/DiseaseDetector/survey.html
@@ -6,7 +6,8 @@
 
 {% block content %}
     <div class="container">
-        <div class="row vertical-center">
+        <p></p>
+        <div class="row">
             <div class="col-lg-2 col-sm-0"></div>
             <div id="surveyContainer" class="col-lg-8 col-sm-12"></div>
             <div class="col-lg-2 col-sm-0"></div>
