--- a/templates/DiseaseDetector/survey.html
+++ b/templates/DiseaseDetector/survey.html
@@ -1,5 +1,34 @@
-{% extends 'DiseaseDetector/base.html' %}
 {% load static %}
+
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <title>aidvantage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <!-- Custom styles -->
+
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/main.css" rel="stylesheet">
+    <link href="https://surveyjs.azureedge.net/1.1.20/survey.css" type="text/css" rel="stylesheet"/>
+</head>
+<body>
+
+<script src="/static/js/jquery.js"></script>
+<script src="/static/js/bootstrap.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://surveyjs.azureedge.net/1.1.20/survey.jquery.min.js"></script>
+<script src="/static/js/main.js"></script>
+
+</body>
+</html>
 
 {% block styles %}
 {% endblock %}
