--- a/templates/DiseaseDetector/base.html
+++ b/templates/DiseaseDetector/base.html
@@ -13,9 +13,11 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/main.css" rel="stylesheet">
     <link href="https://surveyjs.azureedge.net/1.1.20/survey.css" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
 
 </head>
 <body>
@@ -34,6 +36,33 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://surveyjs.azureedge.net/1.1.20/survey.jquery.min.js"></script>
 <script src="/static/js/main.js"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
+<script>
 
+ $(document).ready(function() {
+    $('#example').DataTable({
+        "language":{
+    "decimal":        "",
+    "emptyTable":     "Нет данных",
+    "info":           "Показано _START_ до _END_ из _TOTAL_ записей",
+    "infoEmpty":      "Показано 0 до 0 из 0 записей",
+    "infoFiltered":   "(выбрано из _MAX_ записей)",
+    "infoPostFix":    "",
+    "thousands":      ",",
+    "lengthMenu":     "Показать _MENU_ на странице",
+    "search":         "Поиск",
+    "zeroRecords":    "Не найдено",
+    "paginate": {
+        "first":      "Первая",
+        "last":       "Последняя",
+        "next":       "Следующая",
+        "previous":   "Предыдущая"
+    },
+    }
+});
+} );
+        
+
+</script>
 </body>
 </html>
