detailed results table for doctor

--- a/templates/DiseaseDetector/list_of_results.html
+++ b/templates/DiseaseDetector/list_of_results.html
@@ -34,7 +34,9 @@
                             Нет
                         {% endif %}
                     </td>
-                    <td>Ссылка</td>
+                    <td>
+                        <a href="/detailed/{{item.id}}">Ссылка</a>
+                    </td>
                 </tr>
             </tbody>
             {% endfor %}
