modified detailed results

--- a/templates/DiseaseDetector/detailed_results.html
+++ b/templates/DiseaseDetector/detailed_results.html
@@ -23,53 +23,209 @@
 
             <tbody>
                 <tr>
-                    <td>1. Возраст</td>
+                    <td>1. Пол</td>
+                    <td>{{item.patient.q0}}</td>
+                </tr>
+                <tr>
+                    <td>2. Возраст</td>
                     <td>{{item.patient.q1}}</td>
                 </tr>
                 <tr>
-                    <th>2. Результат нейронной сети</th>
-                    <th>{{item.newral_network_diagnose}}</th>
-                </tr>
-                <tr>
-                    <th>3. Диагноз врача</th>
-                    <th>
-                        {% if item.dockor_diagnose %}
-                            {{item.dockor_diagnose}}
-                        {% else %}
-                            Нет
-                        {% endif %}
-                        <form action="/update_diagnose/{{item.id}}/" method="post">
-                            <input id="diagnose_id" type="hidden" value="{{item.id}}"></label>
-                            <input type="text" id="new_diagnos_value" name="answer" placeholder="Введите новый диагноз">
-                            <input type="submit" id="change_diagnos" value="Изменить диагноз" />
-                        </form>
-                    </th>
-                </tr>
-                
-                <tr>
-                    <td>4. Подвержение ли Вы воздействию вредных условий</td>
+                    <td>3. Подвергались ли Вы воздействию вредных условий (различные виды излучения, вредное производство, токсичные вещества)?</td>
                     <td>{{item.patient.q2}}</td>
                 </tr>
                 <tr>
-                    <td>5. Работали ли Вы на предприятиях с повышенной вредностью (горячий цех, химическое производство, нефтеперерабатывающее предприятие)?</td>
+                    <td>4. Работали ли Вы на предприятиях с повышенной вредностью (горячий цех, химическое производство, нефтеперерабатывающее предприятие)?</td>
                     <td>{{item.patient.q3}}</td>
                 </tr>
                 <tr>
-                    <td>6. Болели ли Ваши кровные родственники злокачественными опухолевыми заболеваниями?</td>
+                    <td>5. Болели ли Ваши кровные родственники злокачественными опухолевыми заболеваниями?</td>
                     <td>{{item.patient.q4}}</td>
                 </tr>
-
-
-                <!-- Вставить также остальнее вопросы c 5 по 31 -->
-
-
                 <tr>
-                    <td>34. Замечали ли Вы у себя кровянистые выделения из половых путей после половых сношений, гинекологических осмотров или при запорах?</td>
+                    <td>6. Вставали ли Вы ранее на учет к онкологу?</td>
+                    <td>{{item.patient.q5}}</td>
+                </tr>
+                <tr>
+                    <td>7. Вы курите?</td>
+                    <td>{{item.patient.q6}}</td>
+                </tr>
+                <tr>
+                    <td>8. Какое количество сигарет в день Вы выкуриваете?</td>
+                    <td>{{item.patient.q7}}</td>
+                </tr>
+                <tr>
+                    <td>9. В течение последних месяцев Вас беспокоил кашель?</td>
+                    <td>{{item.patient.q8}}</td>
+                </tr>
+                <tr>
+                    <td>10. Пол</td>
+                    <td>{{item.patient.q9}}</td>
+                </tr>
+                <tr>
+                    <td>11. Как давно Вы в последний раз выполняли флюорографию, рентгенографию или КТ грудной клетки?</td>
+                    <td>{{item.patient.q10}}</td>
+                </tr>
+                <tr>
+                    <td>12. Замечали ли Вы изменение тембра голоса (осиплость, хрипоту)?</td>
+                    <td>{{item.patient.q11}}</td>
+                </tr>
+                <tr>
+                    <td>13. Был ли у Вас дискомфорт во время глотания пищи или воды (застревание, ощущение инородного тела в горле или пищеводе)?</td>
+                    <td>{{item.patient.q12}}</td>
+                </tr>
+                <tr>
+                    <td>14. Когда-либо Вам был установлен диагноз: язва (или полип) желудка?</td>
+                    <td>{{item.patient.q13}}</td>
+                </tr>
+                <tr>
+                    <td>15. Была ли у Вас рвота после еды?</td>
+                    <td>{{item.patient.q14}}</td>
+                </tr>
+                <tr>
+                    <td>16. Находили ли у Вас ранее заболевание толстого кишечника? </td>
+                    <td>{{item.patient.q15}}</td>
+                </tr>
+                <tr>
+                    <td>17. Ощущали ли Вы дискомфорт (или боли) во время дефекации в прямой кишке, крестце или копчике?</td>
+                    <td>{{item.patient.q16}}</td>
+                </tr>
+                <tr>
+                    <td>18. Замечали ли Вы после дефекации кровь на туалетной бумаге или изменение цвета кала (черный или обесцвеченный)?</td>
+                    <td>{{item.patient.q17}}</td>
+                </tr>
+                <tr>
+                    <td>19. Бывают у Вас ложные позывы на стул?</td>
+                    <td>{{item.patient.q18}}</td>
+                </tr>
+                <tr>
+                    <td>20. Замечали ли Вы беспричинное повышенние температуры тела (кроме простудных/инфекционных заболеваний)?</td>
+                    <td>{{item.patient.q19}}</td>
+                </tr>
+                <tr>
+                    <td>21. Замечали ли Вы у себя усиленную потливость (без физической нагрузки)?</td>
+                    <td>{{item.patient.q20}}</td>
+                </tr>
+                <tr>
+                    <td>22. Бывает ли у Вас отсутствие аппетита без причины или отвращение к еде?</td>
+                    <td>{{item.patient.q21}}</td>
+                </tr>
+                <tr>
+                    <td>23. Бывают ли у Вас необъяснимые(без причины) носовые кровотечения или подкожные кровоизлияния (синяки)?</td>
+                    <td>{{item.patient.q22}}</td>
+                </tr>
+                <tr>
+                    <td>24. Есть ли у Вас боли, требующие систематического приема анальгетиков?</td>
+                    <td>{{item.patient.q23}}</td>
+                </tr>
+                <tr>
+                    <td>25. Заметили ли Вы, что похудели за последние 3 месяца больше чем на 5 кг ненамеренно?</td>
+                    <td>{{item.patient.q24}}</td>
+                </tr>
+                <tr>
+                    <td>26. Находили ли Вы у себя увеличенные лимфоузлы?</td>
+                    <td>{{item.patient.q25}}</td>
+                </tr>
+                <tr>
+                    <td>27. Замечали ли Вы у себя на коже не исчезающие долгое время язвы или трещины?</td>
+                    <td>{{item.patient.q26}}</td>
+                </tr>
+                <tr>
+                    <td>28. Не было ли у Вас последнее время изменения формы и цвета родинок?</td>
+                    <td>{{item.patient.q27}}</td>
+                </tr>
+                <tr>
+                    <td>29. Было ли у вас нарушения мочеиспускания?</td>
+                    <td>{{item.patient.q28}}</td>
+                </tr>
+                <tr>
+                    <td>30. Не замечали ли Вы последнее время примесь крови в моче?</td>
+                    <td>{{item.patient.q29}}</td>
+                </tr>
+                <tr>
+                    <td>31. Находите ли Вы у себя изменения в молочных железах?</td>
+                    <td>{{item.patient.q30}}</td>
+                </tr>
+                <tr>
+                    <td>32. Бывают ли у Вас сукровичные (или кровянистые) выделения из половых путей, не связанные с месячным?</td>
+                    <td>{{item.patient.q31}}</td>
+                </tr>
+                <tr>
+                    <td>33. Замечали ли Вы у себя кровянистые выделения из половых путей после половых сношений, гинекологических осмотров или при запорах?</td>
                     <td>{{item.patient.q32}}</td>
                 </tr>
             </tbody>
         </table>
     </div>
+        <form action="/update_diagnose/{{item.id}}/" method="post">
+        <div class="change">
+            <div class="radio">
+                <label>
+                    {% if item.dockor_diagnose %}
+                        {% if item.dockor_diagnose == 'Низкая вероятность онкологического заболевания' %}
+                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="Низкая вероятность онкологического заболевания" checked>
+                            Низкая вероятность онкологического заболевания   
+                        {% else %}
+                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="Низкая вероятность онкологического заболевания">
+                            Низкая вероятность онкологического заболевания
+                        {% endif %}  
+                    {% else %}
+                        {% if item.newral_network_diagnose == 'Низкая вероятность онкологического заболевания' %}
+                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="Низкая вероятность онкологического заболевания" checked>
+                            Низкая вероятность онкологического заболевания 
+                        {% else %}
+                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="Низкая вероятность онкологического заболевания">
+                            Низкая вероятность онкологического заболевания 
+                        {% endif %}  
+                    {% endif %}  
+                </label>
+            </div>
+            <div class="radio">
+                <label>
+                    {% if item.dockor_diagnose %}
+                        {% if item.dockor_diagnose == 'Онкологическое заболевание возможно и требуется проведение дополнительных процедур' %}
+                            <input type="radio" name="optionsRadios" id="optionsRadios2" value="Онкологическое заболевание возможно и требуется проведение дополнительных процедур" checked>
+                            Онкологическое заболевание возможно и требуется проведение дополнительных процедур   
+                        {% else %}
+                            <input type="radio" name="optionsRadios" id="optionsRadios2" value="Онкологическое заболевание возможно и требуется проведение дополнительных процедур">
+                            Онкологическое заболевание возможно и требуется проведение дополнительных процедур
+                        {% endif %}  
+                    {% else %}
+                        {% if item.newral_network_diagnose == 'Онкологическое заболевание возможно и требуется проведение дополнительных процедур' %}
+                            <input type="radio" name="optionsRadios" id="optionsRadios2" value="Онкологическое заболевание возможно и требуется проведение дополнительных процедур" checked>
+                            Онкологическое заболевание возможно и требуется проведение дополнительных процедур 
+                        {% else %}
+                            <input type="radio" name="optionsRadios" id="optionsRadios2" value="Онкологическое заболевание возможно и требуется проведение дополнительных процедур">
+                            Онкологическое заболевание возможно и требуется проведение дополнительных процедур 
+                        {% endif %}  
+                    {% endif %}  
+                </label>
+            </div>
+            <div class="radio">
+                <label>
+                    {% if item.dockor_diagnose %}
+                        {% if item.dockor_diagnose == 'Высокая вероятность онкологического заболевания' %}
+                            <input type="radio" name="optionsRadios" id="optionsRadios3" value="Высокая вероятность онкологического заболевания" checked>
+                            Высокая вероятность онкологического заболевания  
+                        {% else %}
+                            <input type="radio" name="optionsRadios" id="optionsRadios3" value="Высокая вероятность онкологического заболевания">
+                            Высокая вероятность онкологического заболевания
+                        {% endif %}  
+                    {% else %}
+                        {% if item.newral_network_diagnose == 'Высокая вероятность онкологического заболевания' %}
+                            <input type="radio" name="optionsRadios" id="optionsRadios3" value="Высокая вероятность онкологического заболевания" checked>
+                            Высокая вероятность онкологического заболевания 
+                        {% else %}
+                            <input type="radio" name="optionsRadios" id="optionsRadios3" value="Высокая вероятность онкологического заболевания">
+                            Высокая вероятность онкологического заболевания 
+                        {% endif %}  
+                    {% endif %}  
+                </label>
+            </div>
+            <input type="submit" id="change_diagnos" value="Изменить диагноз" />
+            </div>
+    
+    </form>
     {% endfor %}
 
 {% endblock %}
