--- a/templates/DiseaseDetector/base.html
+++ b/templates/DiseaseDetector/base.html
@@ -57,8 +57,9 @@
         "last":       "Последняя",
         "next":       "Следующая",
         "previous":   "Предыдущая"
-    },
     }
+    },
+    "ordering": false
 });
 } );
         
