edited table results

--- a/templates/DiseaseDetector/detailed_results.html
+++ b/templates/DiseaseDetector/detailed_results.html
@@ -59,7 +59,7 @@
                     <td>{{item.patient.q8}}</td>
                 </tr>
                 <tr>
-                    <td>10. Пол</td>
+                    <td>10. Являетесь ли Вы пассивным курильщиком (наличие активного курильщика дома, на работе)?</td>
                     <td>{{item.patient.q9}}</td>
                 </tr>
                 <tr>
